# axum-beginner-projects

./: Cargo.toml  package-lock.json
assets/: index.html  not_found.html
assets/api/: index.html
assets/root/: index.html  style.css
src/: index.html  main.rs
