[package]
name = "axum-beginner-projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.35.2"
shuttle-runtime = "0.35.2"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version="0.5.0", features=["fs"] }
